// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bottomButtonProps are not null renders correctly 1`] = `
<View
  flex={1}
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
>
  <Connect(Header)
    center={
      Object {
        "prop": "center header",
      }
    }
    left={
      <Connect(BackButton)
        iconStyle={
          Object {
            "color": "#A0A2A6",
          }
        }
      />
    }
    right={
      Object {
        "prop": "right header",
      }
    }
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 32,
        "fontWeight": "300",
        "lineHeight": 38,
        "marginHorizontal": 32,
        "marginVertical": 26,
      }
    }
  >
    Roge is well behaved
  </MyText>
  <Connect(Translate(ReminderButton)) />
  <Component
    style={
      Object {
        "flex": 1,
        "marginVertical": 26,
        "paddingBottom": 14,
        "paddingHorizontal": 32,
      }
    }
  />
  <BottomButton
    onPress={[Function]}
    text="bottom button props"
  />
</View>
`;

exports[`bottomButtonProps are null renders correctly 1`] = `
<View
  flex={1}
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
>
  <Connect(Header)
    center={
      Object {
        "prop": "center header",
      }
    }
    left={
      <Connect(BackButton)
        iconStyle={
          Object {
            "color": "#A0A2A6",
          }
        }
      />
    }
    right={
      Object {
        "prop": "right header",
      }
    }
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 32,
        "fontWeight": "300",
        "lineHeight": 38,
        "marginHorizontal": 32,
        "marginVertical": 26,
      }
    }
  >
    Roge is well behaved
  </MyText>
  <Connect(Translate(ReminderButton)) />
  <Component
    style={
      Object {
        "flex": 1,
        "marginVertical": 26,
        "paddingBottom": 14,
        "paddingHorizontal": 32,
      }
    }
  />
</View>
`;
